# mcp-claude-code

./: .github-topics.md  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  TESTING.md  pyproject.toml
src/mcp_claude_code/: __init__.py  __main__.py  config.py  prompts.py  server.py
src/mcp_claude_code/executor/: interaction_handler.py  interactive_executor.py  stream_parser.py
src/mcp_claude_code/models/: events.py  interactions.py
src/mcp_claude_code/permission_server/: __init__.py  approver.py  callback_server.py
src/mcp_claude_code/storage/: permission_manager.py
tests/test_e2e/: __init__.py  conftest.py  mcp_client.py  mcp_client_sse.py  run_server.py  test_interactions.py  test_negative.py  test_permissions.py  test_progress.py
tests/test_unit/: test_stream_parser.py
